2008-02-21  Tobias C. Rittweiler  <tcr@freebits.de>

	Fix regressions in the `find-definition' test case on SBCL:

	M-. on e.g. SWANK::READ-FROM-EMACS would bring the user to

	  (|defun read-from-emacs ...)

	and not

	  |(defun read-from-emacs ...)
	
	* swank-sbcl.lisp (source-file-position): Don't 1+ the returned
	position; i.e. return a position usable as a CL /file position/
	which start from 0, and not a position usable in Emacs where
	buffer points start from 1. This is important because the return
	value is passed to SWANK-BACKEND::READ-SNIPPET which invokes
	CL:FILE-POSITION on it.
	(make-definition-source-location): Adapted to 1+ the position
	passed to Emacs, to reflect above change.
	
2008-02-20  Helmut Eller  <heller@common-lisp.net>

	Better factorization for M-. and xref commands.

	* slime.el (slime-xref): Renamed from slime-definition.
	(slime-location, slime-location-p): New ADT def.
	(slime-xref-has-location-p, slime-analyze-xrefs): New functions.
	This work used to be done on the Lisp side.
	(slime-pop-to-location): New function.
	(slime-edit-definition, slime-edit-definition-cont): Simplified.
	(slime-find-definitions): New function.
	(slime-goto-definition, slime-goto-definition-other-window)
	(slime-pop-to-other-window, slime-show-definitions): Deleted.
	(slime-insert-xrefs): Simplified.
	(slime-insert-xref-location): Deleted. No need to show the filename
	twice.

	* swank.lisp (find-definitions-for-emacs, xref): Use common
	representation for "definitions" and "xrefs".
	(xref>elisp): New helper.
	(group-xrefs, alistify, parition, location-position<, xref-position)
	(xref-buffer, location-valid-p): Deleted. This work is now done on
	the Emacs side.

2008-02-20  Helmut Eller  <heller@common-lisp.net>

	Emit a warning if the SWANK package already exists.

	* swank-loader.lisp (init): Issue a warning when SWANK will not be
	reloaded.

2008-02-18  Helmut Eller  <heller@common-lisp.net>

	Minor cleanups for inspector code.
